gcc/testsuite/rust/rustc/ui/proc-macro/issue-89566-suggest-fix-invalid-top-level-macro-attr.rs
//@ run-rustfix

#![derive(Debug)] // { dg-error "" "" { target *-*-* } }
#[allow(dead_code)]
struct Test {}

fn main() {}

